--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "prefer-stable": true,
     "require": {
         "php": ">=8.0",
-        "tobento/service-macro": "^1.0"
+        "tobento/service-macro": "^1.0",
+        "tobento/service-dir": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
