--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "require": {
         "php": ">=8.0",
         "tobento/service-macro": "^1.0",
+        "tobento/service-filesystem": "^1.0.4",
         "tobento/service-dir": "^1.0",
         "tobento/service-tag": "^1.0.1"
     },
